# ultimailleQuadRemesh

./: .gitignore  CMakeLists.txt  README.md  geogram.lua  test.sh
.github/workflows/: continuous.yml
meshes/: catorus_voxel_bound_smooth.geogram
meshes/mambo/Basic/: B0.mesh  B1.mesh  B10.mesh  B11.mesh  B12.mesh  B13.mesh  B14.mesh  B15.mesh  B16.mesh  B17.mesh  B18.mesh  B19.mesh  B2.mesh  B20.mesh  B21.mesh  B23.mesh  B25.mesh  B27.mesh  B28.mesh  B29.mesh  B3.mesh  B30.mesh  B31.mesh  B32.mesh  B33.mesh  B34.mesh  B35.mesh  B36.mesh  B37.mesh  B38.mesh  B39.mesh  B4.mesh  B40.mesh  B41.mesh  B42.mesh  B43.mesh  B44.mesh  B45.mesh  B46.mesh  B47.mesh  (+34 more)
meshes/mambo/Medium/: M1.mesh  M2.mesh  M3.mesh  M4.mesh  M5.mesh  M6.mesh  M7.mesh  M8.mesh  M9.mesh
meshes/mambo/Simple/: S0.mesh  S1.mesh  S20.mesh  S22.mesh  S23.mesh  S24.mesh  S25.mesh  S26.mesh  S27.mesh  S3.mesh  S31.mesh  S33.mesh  S34.mesh  S35.mesh  S36.mesh  S37.mesh  S38.mesh  S39.mesh  S4.mesh  S40.mesh  S41.mesh  S42.mesh  S43.mesh  S44.mesh  S45.mesh  S5.mesh  S6.mesh  S7.mesh  S8.mesh  S9.mesh
src/: CMakeLists.txt  bunnin.cpp  bvh.h  helpers.h  main.cpp  matrixEquations.h  param_parser.h  patchFinding.h  remeshing.h
src/assets/: cowhead.geogram
